ノードビュースタイルの読み取りに Gson を使用するように変更した